--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -50,7 +50,7 @@ where $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\
 \begin{figure}
 \centering
 \includegraphics[width=0.45\textwidth]{model_mock.pdf}
-\caption{The mean power spectrum from the $\fnl=0$ mocks (no contamination) and best-fitting theoretical prediction after accounting for the survey geometry and integral constraint effects. The dark and light shades represent the $68\%$ error on the mean and one realization, respectively. Bottom panel shows the residual power spectrum relative to the mean power spectrum. No imaging systematic cleaning is applied to these mocks.}\label{fig:model_mock}
+\caption{The mean power spectrum from the $\fnl=0$ mocks (no contamination) and best-fitting theoretical prediction after accounting for the survey geometry and integral constraint effects. Bottom panel shows the residual power spectrum relative to the mean power spectrum. The dark and light shades represent the $68\%$ error on the mean and one realization, respectively. No imaging systematic cleaning is applied to these mocks.}\label{fig:model_mock}
 \end{figure}
 
 \subsubsection{Survey geometry and integral constraint}
