--- a/style.sty
+++ b/style.sty
@@ -1,6 +1,7 @@
 \usepackage{newtxtext,newtxmath}
 \usepackage[T1]{fontenc}
 \usepackage{ae,aecompl}
+\usepackage{ulem}
 
 
 %----- your packages
@@ -23,10 +24,9 @@
 \graphicspath{{./}{figures/}}
 
 % ----- add your commands
-\newcommand{\mr}[1]{\textcolor{red}{#1}}
+\newcommand{\mr}[1]{\textcolor{cyan}{#1}}
 \newcommand{\mc}[1]{\textcolor{red}{\textbf{MR: \textit{#1}}}}
 \newcommand{\mout}[1]{\textcolor{red}{\sout{#1}}}
-\newcommand{\bbk}[1]{\textcolor{magenta}{#1}}
 \newcommand{\fnl}{f_{\rm NL}}
 
 % Math, Units, etc
